--- a/start/main/templates/main/workers/worker.html
+++ b/start/main/templates/main/workers/worker.html
@@ -10,7 +10,7 @@
         {% for worker in workers %}
             <div class="workers-in">
                 <div class="worker-name">
-                    {{ worker.name }}
+                    <a href="">{{ worker.name }}</a>
                 </div>
             </div>
         {% endfor %}
