--- a/start/main/templates/main/index/index.html
+++ b/start/main/templates/main/index/index.html
@@ -8,7 +8,7 @@
         {% for cafe in cafes %}
             <div class="cafes-in">
                 <div class="cafe-name">
-                    <a href="{% url 'main:workers' cafe.id %}" >{{ cafe.name }}</a>
+                    <a href="{% url 'main:workers' cafe.slug %}" >{{ cafe.name }}</a>
                 </div>
             </div>
         {% endfor %}
