--- a/start/main/templates/main/base.html
+++ b/start/main/templates/main/base.html
@@ -12,7 +12,14 @@
 </head>
 <body>
     <header class="header sticky-top d-flex align-items-center">
-
+        <div class="container d-flex align-items-center justify-content-between py-2">
+            <a class="text-decoration-none" href="{% url 'main:index' %}">Главная</a>
+            <div class="d-flex align-items-center gap-2">
+                {% if request.user.is_staff %}
+                    <a class="btn btn-sm btn-outline-dark" href="{% url 'admin:index' %}">Админка</a>
+                {% endif %}
+            </div>
+        </div>
     </header>
     <div class="container">
         {% block content %}{% endblock content %}
