--- a/start/main/templates/main/base.html
+++ b/start/main/templates/main/base.html
@@ -15,12 +15,19 @@
 <body>
     <header class="header sticky-top d-flex align-items-center">
         <div class="container d-flex align-items-center justify-content-between py-2">
-            <a class="text-decoration-none" href="{% url 'main:index' %}">Главная</a>
+            <a class="btn btn-sm btn-outline-dark" href="{% url 'main:index' %}">Главная</a>
             {% if user.is_superuser %}
             <div class="d-flex align-items-center gap-2">
                 <a class="btn btn-sm btn-outline-dark" href="{% url 'admin:index' %}">Админка</a>
                 <a class="btn btn-sm btn-primary" href="{% url 'main:assign_shop_admin' %}">Назначить управляющих</a>
+                <a class="btn btn-sm btn-primary" href="#">Статистика</a>
             </div>
+            {% endif %}
+            {% if user.is_authenticated %}
+            <a>{{ user.username }}</a>
+            <a class="btn btn-sm btn-primary" href="{% url 'main:logout' %}">Выйти</a>
+            {% else %}
+            <a class="btn btn-sm btn-primary" href="{% url 'main:login' %}">Войти</a>
             {% endif %}
         </div>
     </header>
