--- a/start/main/templates/main/shops/shops.html
+++ b/start/main/templates/main/shops/shops.html
@@ -17,5 +17,8 @@
         <div class="shift-shop">
             <a href="{% url 'main:schedule' shop.slug now_year now_month %}">Расписание этой точки</a>
         </div>
+        <div class="applications">
+            <a href="{% url 'main:shift_applications' %}">Заявки</a>
+        </div>
     </div>
 {% endblock content %}
