--- a/start/main/templates/main/base.html
+++ b/start/main/templates/main/base.html
@@ -20,7 +20,7 @@
             <div class="d-flex align-items-center gap-2">
                 <a class="btn btn-sm btn-outline-dark" href="{% url 'admin:index' %}">Админка</a>
                 <a class="btn btn-sm btn-primary" href="{% url 'main:assign_shop_admin' %}">Назначить управляющих</a>
-                <a class="btn btn-sm btn-primary" href="#">Статистика</a>
+                <a class="btn btn-sm btn-primary" href="{% url 'main:statistics'%}">Статистика</a>
             </div>
             {% endif %}
             {% if user.is_authenticated %}
