--- a/start/main/templates/main/statistics/statistics.html
+++ b/start/main/templates/main/statistics/statistics.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h2>Статистика зарплат</h2>
+<h2>Подсчет зарплат</h2>
 
 <form method="get" class="mb-3">
     <label>С даты: <input type="date" name="from" value="{{ date_from }}"></label>
