--- a/start/main/templates/main/base.html
+++ b/start/main/templates/main/base.html
@@ -20,14 +20,17 @@
             <div class="d-flex align-items-center gap-2">
                 <a class="btn btn-sm btn-outline-dark" href="{% url 'admin:index' %}">Админка</a>
                 <a class="btn btn-sm btn-primary" href="{% url 'main:assign_shop_admin' %}">Назначить управляющих</a>
-                <a class="btn btn-sm btn-primary" href="{% url 'main:statistics'%}">Статистика</a>
+                <a class="btn btn-sm btn-primary" href="{% url 'main:statistics'%}">Зарплаты</a>
             </div>
             {% endif %}
             {% if user.is_authenticated %}
             <a>{{ user.username }}</a>
             <a class="btn btn-sm btn-primary" href="{% url 'main:logout' %}">Выйти</a>
             {% else %}
-            <a class="btn btn-sm btn-primary" href="{% url 'main:login' %}">Войти</a>
+            <div class="auth">
+                <a class="btn btn-sm btn-primary" href="{% url 'main:login' %}">Войти</a>
+                <a class="btn btn-sm btn-outline-dark" href="{% url 'main:register' %}">Регистрация</a>
+            </div>
             {% endif %}
         </div>
     </header>
