--- a/start/main/templates/main/index/index.html
+++ b/start/main/templates/main/index/index.html
@@ -5,12 +5,16 @@
 
 {% block content %}
     <div class="home">
-        {% for cafe in cafes %}
-            <div class="cafes-in">
-                <div class="cafe-name">
-                    <a href="{% url 'main:workers' cafe.slug %}" class="cafe-name-a">{{ cafe.name }}</a>
+        {% if show_cafes %}
+            {% for cafe in cafes %}
+                <div class="cafes-in">
+                    <div class="cafe-name">
+                        <a href="{% url 'main:workers' cafe.slug %}" class="cafe-name-a">{{ cafe.name }}</a>
+                    </div>
                 </div>
-            </div>
-        {% endfor %}
+            {% endfor %}
+        {% else %}
+            <p>Дождитесь назначения точки от админа</p>
+        {% endif %}
     </div>
 {% endblock content %}
