--- a/start/main/templates/main/workers/worker.html
+++ b/start/main/templates/main/workers/worker.html
@@ -24,7 +24,8 @@
         </div>
 
         <div class="col">
-            <h3 class="m-0">{{ worker.name }}</h3>
+            <h3 class="m-0">Имя: {{ worker.name }}</h3>
+            <h3 class="m-0">Username: {{ worker.user }}</h3>
             <div class="text-muted">Точка: {{ worker.coffee_shop.name }}</div>
         </div>
     </div>
@@ -34,7 +35,7 @@
     <div class="row">
         <div class="col-md-6">
             <div><b>Телефон:</b> {{ worker.phone_number }}</div>
-            <div><b>Ставка:</b> {{ worker.hourly_rate }}</div>
+            <div><b>Ставка:</b> {% if worker.coffee_shop %}{{ worker.get_hourly_rate }}{% else %}—{% endif %}</div>
             <div><b>Последний отпуск:</b> {% if worker.vacation == None %}Не было {% else %} {{ worker.vacation }}
                 {% endif %}</div>
         </div>
